# thistle

./: LICENSE  circle.yml  program.thst  stack.yaml  thistle.cabal
src/: Grammar.hs  Grammar.y  Lang.hs  Lexer.hs  Main.hs  ParseE.hs  ParseE.y  Web.hs
static/: thistle.css  thistle.js
templates/: bar.tpl  baz.tpl  each.tpl  foo.tpl  name.tpl
test/: Spec.hs
