name:                thistle
version:             0.1.0.0
synopsis:            A recipe planner
description:         Please see README.md
homepage:            http://github.com/dbp/thistle
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
copyright:           2015 Daniel Patterson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/dbp/mealstrat

library
  exposed-modules:     Lang
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


Test-Suite test-thistle
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  default-language:    Haskell2010
  build-depends: base
               , thistle
               , text
               , parsec
               , containers
               , hspec